[package]
name = "kevy-map"
description = "Open-addressing hashtable with bucket-addr prefetch API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-map"
readme = "README.md"
keywords = ["hashmap", "hashtable", "open-addressing", "swiss", "prefetch"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
kevy-hash     = { path = "../kevy-hash",     version = "0.1" }
kevy-madvise  = { path = "../kevy-madvise",  version = "0.1" }

[dev-dependencies]
kevy-bench = { path = "../kevy-bench" }
