[package]
name = "kevy-net"
description = "kevy event-driven reactor (kqueue/epoll) — pure Rust, zero deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "reactor", "epoll", "kqueue", "event-loop"]
categories = ["network-programming", "asynchronous"]

[dependencies]
kevy-sys = { path = "../kevy-sys", version = "0.1" }
