[package]
name = "kevy-persist"
description = "kevy persistence — RDB-style snapshots + AOF, pure Rust, zero deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "persistence", "rdb", "aof", "snapshot"]
categories = ["database-implementations", "filesystem"]

[lints]
workspace = true

[dependencies]
kevy-store = { path = "../kevy-store", version = "1.1.1" }
kevy-resp = { path = "../kevy-resp", version = "1.1.1" }
