[package]
name = "kevy-persist"
description = "kevy persistence — RDB-style snapshots + AOF, pure Rust, zero deps."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "persistence", "rdb", "aof", "snapshot"]
categories = ["database-implementations", "filesystem"]

[lints]
workspace = true

[dependencies]
kevy-store = { path = "../kevy-store", version = "2.0.0" }
kevy-resp = { path = "../kevy-resp", version = "2.0.0" }
