[package]
name = "kevy-replicate"
description = "Primary-to-replica streaming replication for kevy (v3 cluster series, Phase 1)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-replicate"
readme = "README.md"
keywords = ["replication", "kevy", "redis", "cluster", "kv"]
categories = ["database", "network-programming"]

[lints]
workspace = true

[dependencies]
kevy-resp = { path = "../kevy-resp", version = "1.19.0" }
