[package]
name = "kevy-resp-client"
description = "Blocking RESP2 client over TCP. Pure Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "resp", "client", "valkey", "tcp"]
categories = ["network-programming", "database"]

[dependencies]
kevy-resp = { path = "../kevy-resp", version = "0.1" }
