[package]
name = "kevy-resp-client"
description = "Blocking RESP2 client over TCP. Pure Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-resp-client"
readme = "README.md"
keywords = ["redis", "resp", "client", "valkey", "tcp"]
categories = ["network-programming", "database"]

[lints]
workspace = true

[dependencies]
kevy-resp = { path = "../kevy-resp", version = "1.2.0" }
