[package]
name = "kevy-resp"
description = "RESP2 wire-protocol codec. Pure Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["redis", "resp", "protocol", "codec", "kevy"]
categories = ["network-programming", "parser-implementations", "encoding"]

[dependencies]

[dev-dependencies]
kevy-bench = { path = "../kevy-bench", version = "0.1" }
