[package]
name = "kevy-resp"
description = "RESP2 + RESP3 wire-protocol codec. Pure Rust."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kevy-resp"
readme = "README.md"
keywords = ["redis", "resp", "protocol", "codec", "kevy"]
categories = ["network-programming", "parser-implementations", "encoding"]

[lints]
workspace = true

[dependencies]

[dev-dependencies]
kevy-bench = { path = "../kevy-bench" }
