[package]
name = "kevy-ring"
description = "Lock-free bounded SPSC ring buffer. Pure Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["spsc", "lock-free", "ring-buffer", "queue", "kevy"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]

[dev-dependencies]
kevy-bench = { path = "../kevy-bench", version = "0.1" }
