[package]
name = "kevy-rt"
description = "kevy thread-per-core shared-nothing runtime — pure Rust, zero deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "thread-per-core", "shared-nothing", "runtime", "reactor"]
categories = ["network-programming", "concurrency", "database-implementations"]

[lints]
workspace = true

[dependencies]
kevy-sys = { path = "../kevy-sys", version = "1.2.0" }
kevy-store = { path = "../kevy-store", version = "1.2.0" }
kevy-resp = { path = "../kevy-resp", version = "1.2.0" }
kevy-ring = { path = "../kevy-ring", version = "1.2.0" }
kevy-persist = { path = "../kevy-persist", version = "1.2.0" }
kevy-hash = { path = "../kevy-hash", version = "1.2.0" }
kevy-map = { path = "../kevy-map", version = "1.2.0" }

# io_uring engine is Linux-only; the rest of kevy-rt's hot path is the
# epoll/kqueue reactor in kevy-sys. Gate at the manifest level so non-
# Linux builds don't pull an empty crate into the graph.
[target.'cfg(target_os = "linux")'.dependencies]
kevy-uring = { path = "../kevy-uring", version = "1.2.0" }
