[package]
name = "kevy-store"
description = "kevy keyspace + value types + expiry — pure Rust, zero deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "keyspace", "kv", "database", "ttl"]
categories = ["database-implementations", "data-structures", "caching"]

[lints]
workspace = true

[dependencies]
kevy-hash = { path = "../kevy-hash", version = "1.0.2" }
kevy-bytes = { path = "../kevy-bytes", version = "1.0.2" }
kevy-map = { path = "../kevy-map", version = "1.0.2" }

[dev-dependencies]
kevy-bench = { path = "../kevy-bench" }
