[package]
name = "kevy-store"
description = "kevy keyspace + value types + expiry — pure Rust, zero deps."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "keyspace", "kv", "database", "ttl"]
categories = ["database-implementations", "data-structures", "caching"]

[lints]
workspace = true

[dependencies]
kevy-hash = { path = "../kevy-hash", version = "2.0.0" }
kevy-bytes = { path = "../kevy-bytes", version = "2.0.0" }
kevy-map = { path = "../kevy-map", version = "2.0.0" }

[dev-dependencies]
kevy-bench = { path = "../kevy-bench" }
