[package]
name = "kevy-sys"
description = "Hand-written OS-boundary bindings for kevy — the only place libc is touched."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "epoll", "kqueue", "socket", "reactor"]
categories = ["os", "network-programming", "external-ffi-bindings"]

[dependencies]
