[package]
name = "kevy-sys"
description = "Hand-curated OS bindings for kevy — sockets + readiness poller."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["redis", "epoll", "kqueue", "socket", "reactor"]
categories = ["os", "network-programming", "external-ffi-bindings"]

[lints]
workspace = true

[dependencies]
